Finished second lab.

--- a/STPMP/app/src/main/AndroidManifest.xml
+++ b/STPMP/app/src/main/AndroidManifest.xml
@@ -15,7 +15,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DisplayMessageActivity"></activity>
+        <activity android:name=".DisplayMessageActivity" />
+        <activity android:name=".LabTwoFirstActivity"
+                  android:windowSoftInputMode="stateVisible"/>
+
+        <activity android:name=".LabTwoSecondActivity"
+                  android:windowSoftInputMode="stateVisible"></activity>
     </application>
 
 </manifest>
