--- a/STPMP/app/src/main/AndroidManifest.xml
+++ b/STPMP/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DisplayMessageActivity" />
+        <activity android:name=".LabOneActivity" />
         <activity
             android:name=".LabTwoFirstActivity"
             android:windowSoftInputMode="stateVisible" />
